--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -1,101 +1,5 @@
 cmake_minimum_required(VERSION 3.12)
-project(figment)
-
-set(CMAKE_CXX_STANDARD 17)
-
-add_executable(figment "")
-
-target_include_directories(figment PRIVATE
-        src
-        lib/imgui/include
-        lib/glm
-        lib
-        lib/entt
-        src/core
-        src/scene
-        src/scene/components
-        src/physics
-        src/platform/opengl
-        src/scripting
-        lib/mono/include
-        /usr/local/share/dotnet/packs/Microsoft.NETCore.App.Host.osx-arm64/7.0.8/runtimes/osx-arm64/native
-        /opt/homebrew/include
-)
-target_link_directories(figment PRIVATE
-        /opt/homebrew/lib
-        /usr/local/share/dotnet/packs/Microsoft.NETCore.App.Host.osx-arm64/7.0.8/runtimes/osx-arm64/native
-        /opt/homebrew/opt/zlib/lib
-        lib/mono/lib
-)
-
-
-# Add the GL_SILENCE_DEPRECATION preprocessor definition to the target
-target_compile_definitions(figment PRIVATE GL_SILENCE_DEPRECATION)
-
-add_custom_command(
-        TARGET figment
-        POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/res ${CMAKE_BINARY_DIR}/res
-        COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/mono ${CMAKE_BINARY_DIR}/mono
-        COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/script-core ${CMAKE_BINARY_DIR}/script-core
-        COMMENT "Copied resources to ${CMAKE_BINARY_DIR}"
-)
-
-#        file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/res DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
-#        file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/mono DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
-#        file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/script-core DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
-
-
-file(GLOB_RECURSE SRC_FILES
-        "src/*.cpp"
-        "lib/imgui/*.cpp"
-)
-
-file(GLOB_RECURSE EXCLUDED_SRC_FILES
-        "src/platform/webgpu/*.cpp"
-        "lib/imgui/imgui_impl_wgpu.cpp"
-)
-
-list(REMOVE_ITEM SRC_FILES ${EXCLUDED_SRC_FILES})
-
-target_sources(figment PRIVATE ${SRC_FILES})
-
-#find_package(glfw3 REQUIRED)
-#find_package(GLEW REQUIRED)
-
-target_link_libraries(figment
-        "-framework OpenGL"
-        "-framework Cocoa"
-        "-framework IOKit"
-        "-framework CoreVideo"
-        -lglfw
-        -lGLEW
-        -lm
-        -lnethost
-        -lz
-        -liconv
-        -lmonosgen-2.0
-)
-
-# Add a custom target to build the .NET project
-add_custom_target(build_scriptcore
-        COMMAND dotnet build > /dev/null
-        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/script-core/src
-        COMMENT "Building ScriptCore"
-)
-
-# Copy the compiled DLL after building the .NET project
-add_custom_command(TARGET build_scriptcore POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy_if_different
-        ${CMAKE_CURRENT_SOURCE_DIR}/script-core/src/bin/Debug/netstandard2.0/ScriptCore.dll
-        ${CMAKE_CURRENT_SOURCE_DIR}/script-core/ScriptCore.dll
-        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-)
-
-# Link the custom target to the main executable
-add_dependencies(figment build_scriptcore)
-
-### Figment WASM
+project(engine)
 
 add_executable(figment_wasm "")
 
