Include engine res in build

--- a/portfolio/CMakeLists.txt
+++ b/portfolio/CMakeLists.txt
@@ -49,6 +49,7 @@ set_target_properties(portfolio PROPERTIES LINK_FLAGS "\
         -s ASSERTIONS=1\
         -s USE_ES6_IMPORT_META=1\
         --preload-file res@/res\
+        --preload-file ../../engine/res/shaders@/res/shaders/builtin\
         -lglfw\
         -g\
         --shell-file ${CMAKE_CURRENT_SOURCE_DIR}/index.html\
