Begin fix editor after major changes

--- a/editor/CMakeLists.txt
+++ b/editor/CMakeLists.txt
@@ -1,22 +1,25 @@
 cmake_minimum_required(VERSION 3.12)
 project(editor)
 
+add_subdirectory(../engine engine)
+
 add_executable(editor)
+
+add_dependencies(editor engine)
 
 target_compile_definitions(editor PRIVATE GL_SILENCE_DEPRECATION)
 target_compile_definitions(editor PRIVATE WEBGPU_BACKEND_EMSCRIPTEN)
 target_compile_options(editor PRIVATE -Wno-deprecated-literal-operator)
 
-if (EMSCRIPTEN)
+message(STATUS "Configuring ${CMAKE_PROJECT_NAME} for ${CMAKE_BUILD_TYPE} (${CMAKE_SYSTEM_NAME})")
+
+if (CMAKE_BUILD_TYPE STREQUAL "Debug")
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O0 -Wno-dangling-else")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O0 -Wno-dangling-else")
+else ()
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 --closure 1")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 --closure 1")
 endif ()
-
-add_custom_target(setup_emscripten_env
-        COMMAND source ~/dev/emsdk/emsdk_env.sh
-)
-
-add_dependencies(editor setup_emscripten_env)
 
 target_include_directories(editor
         PRIVATE
@@ -24,6 +27,7 @@ target_include_directories(editor
         ../engine/src
         ../engine/src/core
         ../engine/src/scene
+        ../engine/src/debug
         ../engine/src/scene/components
         ../engine/src/physics
         ../engine/src/renderer
@@ -38,8 +42,6 @@ file(GLOB_RECURSE SRC_FILES
         "src/*.cpp"
 )
 
-list(REMOVE_ITEM SRC_FILES ${EXCLUDED_SRC_FILES})
-
 target_sources(editor PRIVATE ${SRC_FILES})
 
 set_target_properties(editor PROPERTIES LINK_FLAGS "\
@@ -52,14 +54,12 @@ set_target_properties(editor PROPERTIES LINK_FLAGS "\
         -s ASSERTIONS=1\
         -s USE_ES6_IMPORT_META=1\
         --preload-file res@/res\
-        -lGLEW\
+        --preload-file ../../../engine/res/shaders@/res/shaders/builtin\
         -lglfw\
-        -g\
-        --shell-file ${CMAKE_CURRENT_SOURCE_DIR}/../engine/index.html\
+        --shell-file ${CMAKE_CURRENT_SOURCE_DIR}/index.html\
 ")
 
-# link static engine lib
-target_link_directories(editor PRIVATE ../engine/build)
+target_link_directories(editor PRIVATE ${CMAKE_BINARY_DIR}/engine)
 target_link_libraries(editor libengine.a)
 
 add_custom_target(cleanup
@@ -78,7 +78,7 @@ add_custom_command(
         COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/res ${CMAKE_BINARY_DIR}/res
         COMMENT "Copied resources to ${CMAKE_BINARY_DIR}"
 )
-#
+
 add_custom_command(TARGET editor POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/index.html ${CMAKE_CURRENT_BINARY_DIR}/index.html
         COMMENT "Copied shell file to: ${CMAKE_CURRENT_BINARY_DIR}"
