--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -3,6 +3,8 @@ cmake_minimum_required(VERSION 3.12)
 project(engine)
 add_library(engine STATIC)
 
+set_property(TARGET engine PROPERTY CXX_STANDARD 20)
+
 target_compile_definitions(engine PRIVATE GL_SILENCE_DEPRECATION)
 target_compile_definitions(engine PRIVATE WEBGPU_BACKEND_EMSCRIPTEN)
 target_compile_options(engine PRIVATE -Wno-deprecated-literal-operator)
