--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -40,3 +40,33 @@ file(GLOB_RECURSE SRC_FILES
 )
 
 target_sources(engine PRIVATE ${SRC_FILES})
+
+if (CMAKE_BUILD_TYPE STREQUAL "Test")
+    include(FetchContent)
+    FetchContent_Declare(
+            googletest
+            URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
+            DOWNLOAD_EXTRACT_TIMESTAMP true
+    )
+    set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+    FetchContent_MakeAvailable(googletest)
+
+    enable_testing()
+
+    add_executable(
+            figment_tests
+            test/pool_tests.cpp
+            test/handle_tests.cpp
+    )
+
+    set_property(TARGET figment_tests PROPERTY CXX_STANDARD 20)
+
+    target_include_directories(figment_tests PRIVATE ../engine/src/core)
+    target_link_libraries(
+            figment_tests
+            GTest::gtest_main
+    )
+
+    include(GoogleTest)
+    gtest_discover_tests(figment_tests)
+endif ()
