Begin vk platform support

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -1,23 +1,32 @@
 cmake_minimum_required(VERSION 3.12)
 
+option(USE_VULKAN "Build with Vulkan support" OFF)
+
 project(engine)
 add_library(engine STATIC)
 
 set_property(TARGET engine PROPERTY CXX_STANDARD 20)
 
+# Platform-specific configurations
+if (EMSCRIPTEN)
+    target_compile_definitions(engine PRIVATE WEBGPU_BACKEND_EMSCRIPTEN)
+    set(EMSCRIPTEN_PATH "~/dev/emsdk")
+    add_custom_target(setup_emscripten
+            COMMAND source ${EMSCRIPTEN_PATH}/emsdk_env.sh
+    )
+    add_dependencies(engine setup_emscripten)
+else ()
+    #    find_package(Vulkan REQUIRED)
+    #    target_compile_definitions(engine PRIVATE VULKAN_BACKEND_MACOS)
+    #    target_include_directories(engine PRIVATE ${Vulkan_INCLUDE_DIRS})
+    #    target_link_libraries(engine PRIVATE ${Vulkan_LIBRARIES})
+    target_include_directories(engine PRIVATE "/opt/homebrew/Cellar/glfw/3.3.8/include")
+endif ()
+
 target_compile_definitions(engine PRIVATE GL_SILENCE_DEPRECATION)
-target_compile_definitions(engine PRIVATE WEBGPU_BACKEND_EMSCRIPTEN)
 target_compile_options(engine PRIVATE -Wno-deprecated-literal-operator)
 
-set(EMSCRIPTEN_PATH "~/dev/emsdk")
-
 message(STATUS "Configuring engine for ${CMAKE_BUILD_TYPE} (${CMAKE_SYSTEM_NAME})")
-
-add_custom_target(setup_emscripten
-        COMMAND source ${EMSCRIPTEN_PATH}/emsdk_env.sh
-)
-
-add_dependencies(engine setup_emscripten)
 
 target_include_directories(engine
         PRIVATE
@@ -41,7 +50,7 @@ file(GLOB_RECURSE SRC_FILES
 
 target_sources(engine PRIVATE ${SRC_FILES})
 
-if (CMAKE_BUILD_TYPE STREQUAL "Debug")
+if (NOT EMSCRIPTEN)
     include(FetchContent)
     FetchContent_Declare(
             googletest
