--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -25,10 +25,10 @@ if (EMSCRIPTEN)
     target_compile_definitions(engine PRIVATE GL_SILENCE_DEPRECATION)
     target_compile_options(engine PRIVATE -Wno-deprecated-literal-operator)
 else ()
+    set(VULKAN_SDK "~/dev/vulkansdk/1.3.283.0/macOS")
     target_compile_definitions(engine PRIVATE VULKAN_BACKEND)
     #    find_package(Vulkan REQUIRED)
-    #    target_compile_definitions(engine PRIVATE VULKAN_BACKEND_MACOS)
-    #    target_include_directories(engine PRIVATE ${Vulkan_INCLUDE_DIRS})
+    target_include_directories(engine PRIVATE ${VULKAN_SDK}/include)
     #    target_link_libraries(engine PRIVATE ${Vulkan_LIBRARIES})
     target_include_directories(engine PRIVATE "/opt/homebrew/Cellar/glfw/3.3.8/include")
     target_include_directories(engine PRIVATE src/platform/vulkan)
