Add image source to target

--- a/vk-app/CMakeLists.txt
+++ b/vk-app/CMakeLists.txt
@@ -45,6 +45,7 @@ file(GLOB_RECURSE SRC_FILES
         "src/*.cpp"
         "../engine/src/platform/vulkan/*.cpp"
         "../engine/src/renderer/PerspectiveCamera.cpp"
+        "../engine/src/core/Image.cpp"
 )
 
 target_sources(vk-app PRIVATE ${SRC_FILES})
