--- a/vk-app/CMakeLists.txt
+++ b/vk-app/CMakeLists.txt
@@ -33,51 +33,21 @@ target_include_directories(vk-app
         ../engine/lib/glm
 )
 
-set(VULKAN_SDK "~/dev/vulkansdk/1.3.283.0/macOS")
-target_include_directories(vk-app PRIVATE ${VULKAN_SDK}/include)
-target_link_libraries(vk-app "/Users/willehard/dev/vulkansdk/1.3.283.0/macOS/lib/libvulkan.dylib")
-
-
-target_include_directories(vk-app PRIVATE "/opt/homebrew/Cellar/glfw/3.4/include")
-target_link_libraries(vk-app "/opt/homebrew/Cellar/glfw/3.4/lib/libglfw.dylib")
+target_include_directories(vk-app PRIVATE "/usr/include/GLFW")
+target_link_libraries(vk-app "/usr/lib/x86_64-linux-gnu/libglfw.so")
 
 file(GLOB_RECURSE SRC_FILES
         "src/*.cpp"
-        "../engine/src/Application.cpp"
-        "../engine/src/core/FPSCounter.cpp"
-        "../engine/src/renderer/RenderStats.cpp"
-        "../engine/src/platform/vulkan/*.cpp"
-        "../engine/src/renderer/PerspectiveCamera.cpp"
-        "../engine/src/core/Image.cpp"
-        "../engine/src/core/Input.cpp"
-        "../engine/src/core/LayerStack.cpp"
-        "../engine/src/core/ResourceManager.cpp"
 )
 
 target_sources(vk-app PRIVATE ${SRC_FILES})
-target_sources(vk-app PRIVATE ../engine/src/core/Window.cpp)
-target_sources(vk-app PRIVATE ../engine/src/core/Log.cpp)
 
-target_sources(vk-app PRIVATE
-        "../engine/lib/imgui/backends/imgui_impl_glfw.cpp"
-        "../engine/lib/imgui/backends/imgui_impl_vulkan.cpp"
-)
-
-target_sources(vk-app PRIVATE
-        "../engine/lib/imgui/imgui.cpp"
-        "../engine/lib/imgui/imgui_draw.cpp"
-        "../engine/lib/imgui/imgui_widgets.cpp"
-        "../engine/lib/imgui/imgui_tables.cpp"
-        "../engine/lib/imgui/imgui_demo.cpp"
-)
-
-#target_link_directories(vk-app PRIVATE ${CMAKE_BINARY_DIR}/engine)
-#target_link_libraries(vk-app libengine.a)
+target_link_libraries(vk-app engine)
 
 # Build list of all shaders in the res directory
 file(GLOB_RECURSE SHADER_FILES
-        "${CMAKE_SOURCE_DIR}/res/*.vert"
-        "${CMAKE_SOURCE_DIR}/res/*.frag"
+        "${CMAKE_CURRENT_SOURCE_DIR}/res/*.vert"
+        "${CMAKE_CURRENT_SOURCE_DIR}/res/*.frag"
 )
 
 add_custom_target(shaders DEPENDS ${SHADER_FILES})
@@ -85,14 +55,14 @@ add_custom_target(shaders DEPENDS ${SHADER_FILES})
 add_custom_command(
         TARGET shaders
         PRE_BUILD
-        COMMAND for file in "${CMAKE_SOURCE_DIR}/res/*.vert" ";" do glslangValidator $\${file} -o $\${file}.spv -V --quiet ";" done
-        COMMAND for file in "${CMAKE_SOURCE_DIR}/res/*.frag" ";" do glslangValidator $\${file} -o $\${file}.spv -V --quiet ";" done
+        COMMAND for file in "${CMAKE_CURRENT_SOURCE_DIR}/res/*.vert" ";" do glslangValidator $\${file} -o $\${file}.spv -V --quiet ";" done
+        COMMAND for file in "${CMAKE_CURRENT_SOURCE_DIR}/res/*.frag" ";" do glslangValidator $\${file} -o $\${file}.spv -V --quiet ";" done
         COMMENT "Compiling shaders"
 )
 
 add_custom_command(
         TARGET shaders
         PRE_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/res ${CMAKE_BINARY_DIR}/res
-        COMMENT "Copied resources to ${CMAKE_BINARY_DIR}"
+        COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/res ${CMAKE_CURRENT_BINARY_DIR}/res
+        COMMENT "Copied resources to ${CMAKE_CURRENT_BINARY_DIR}"
 )
