--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -93,45 +93,47 @@ endif ()
 
 target_sources(engine PRIVATE ${SRC_FILES})
 
-if (NOT EMSCRIPTEN)
-    include(FetchContent)
-    FetchContent_Declare(
-            googletest
-            URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
-            DOWNLOAD_EXTRACT_TIMESTAMP true
-    )
-    set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-    FetchContent_MakeAvailable(googletest)
+#if (NOT EMSCRIPTEN)
+#    include(FetchContent)
+#    FetchContent_Declare(
+#            googletest
+#            URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
+#            DOWNLOAD_EXTRACT_TIMESTAMP true
+#    )
+#    set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+#    FetchContent_MakeAvailable(googletest)
+#
+#    enable_testing()
+#
+#    add_executable(
+#            figment_tests
+#    )
+#
+#    file(GLOB_RECURSE TEST_SRC_FILES
+#            "test/*.cpp"
+#    )
+#
+#    list(REMOVE_ITEM TEST_SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/test/ResourceManagerTests.cpp)
+#
+#    target_sources(figment_tests PRIVATE
+#            ${TEST_SRC_FILES}
+#    )
+#
+#    set_property(TARGET figment_tests PROPERTY CXX_STANDARD 20)
+#
+#    target_include_directories(figment_tests PRIVATE
+#            ../engine/src/core
+#            ../engine/src/renderer
+#            ../engine/src/utils
+#            ../engine/lib/glm
+#    )
+#    target_link_libraries(
+#            figment_tests
+#            GTest::gtest_main
+#    )
+#
+#    include(GoogleTest)
+#    gtest_discover_tests(figment_tests)
+#endif ()
 
-    enable_testing()
-
-    add_executable(
-            figment_tests
-    )
-
-    file(GLOB_RECURSE TEST_SRC_FILES
-            "test/*.cpp"
-    )
-
-    list(REMOVE_ITEM TEST_SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/test/ResourceManagerTests.cpp)
-
-    target_sources(figment_tests PRIVATE
-            ${TEST_SRC_FILES}
-    )
-
-    set_property(TARGET figment_tests PROPERTY CXX_STANDARD 20)
-
-    target_include_directories(figment_tests PRIVATE
-            ../engine/src/core
-            ../engine/src/renderer
-            ../engine/src/utils
-            ../engine/lib/glm
-    )
-    target_link_libraries(
-            figment_tests
-            GTest::gtest_main
-    )
-
-    include(GoogleTest)
-    gtest_discover_tests(figment_tests)
-endif ()
+#add_subdirectory(test)
